# DijkstrasProject

./: .gitignore  FIX_SUMMARY.md  README.md  dijkstrasProject.gresource.xml  meson.build  verify_fix.sh
data/: menu.ui  my_window.ui
include/: app_data.h  callbacks.h  dijkstra.h  drawing.h  edit.h  graph.h  interaction.h  osm_reader.h  ui_helpers.h
src/: callbacks.c  dijkstra.c  drawing.c  edit.c  graph.c  interaction.c  main.c  osm_reader.c  osm_reader_new.c  ui_helpers.c
test/: run_tests.sh  test_app_debug.c  test_arrow_size.c  test_casaprimo  test_casaprimo.c  test_coordinates.c  test_debug  test_debug.c  test_directed_graph  test_directed_graph.c  test_directed_safe  test_directed_safe.c  test_draw.c  test_events  test_events.c  test_final_demo  test_final_demo.c  test_locale.c  test_parsing.c  test_png_export.c  test_point_selection  test_point_selection.c  test_selection.sh  test_simple  test_simple.c  test_simple_selection  test_simple_selection.c  verify_fix.sh
test_data/: simple_test.osm  test.osm  test_oneway.osm
